# rust-api

./: .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2025-01-06-210517_users/: up.sql
src/: main.rs
src/api/: mod.rs
src/api/infrastructure/: mod.rs
src/api/infrastructure/db/: mod.rs  schema.rs
src/cmd/: main.rs
src/handlers/: user.rs
src/internal/: mod.rs
src/internal/infrastructure/: mod.rs
src/models/: user.rs
