[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres"] }
diesel-async = { version = "0.5.0", features = ["postgres"] }
chrono = "0.4"
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
# r2d2 = "0.8.9"
# r2d2-diesel = { version = "1.0.0", features = ["diesel_2"] }
dotenvy = "0.15"

[[bin]]
name = "rust-api"
